@@ -34,6 +34,10 @@ enum {
   SILCTXT_CHANNEL_NOTICE,
   SILCTXT_CHANNEL_OWNACTION,
   SILCTXT_CHANNEL_OWNNOTICE,
+  SILCTXT_CHANNEL_INVITE_LIST,
+  SILCTXT_CHANNEL_NO_INVITE_LIST,
+  SILCTXT_CHANNEL_BAN_LIST,
+  SILCTXT_CHANNEL_NO_BAN_LIST,
 
   SILCTXT_FILL_2,
 
@@ -62,6 +66,17 @@ enum {
   SILCTXT_KEY_AGREEMENT_ERROR,
   SILCTXT_KEY_AGREEMENT_FAILURE,
   SILCTXT_KEY_AGREEMENT_TIMEOUT,
+  SILCTXT_PUBKEY_RECEIVED,
+  SILCTXT_PUBKEY_FINGERPRINT,
+  SILCTXT_PUBKEY_UNSUPPORTED,
+  SILCTXT_PUBKEY_DISCARD,
+  SILCTXT_PUBKEY_ACCEPT,
+  SILCTXT_PUBKEY_ACCEPT_ANYWAY,
+  SILCTXT_PUBKEY_COULD_NOT_LOAD,
+  SILCTXT_PUBKEY_MALFORMED,
+  SILCTXT_PUBKEY_NO_MATCH,
+  SILCTXT_PUBKEY_MAYBE_EXPIRED,
+  SILCTXT_PUBKEY_MITM_ATTACK,
 
   SILCTXT_FILL_4,
 
@@ -69,7 +84,18 @@ enum {
   SILCTXT_ROUTER_OPER,
   SILCTXT_LIST_HEADER,
   SILCTXT_LIST,
-
+  SILCTXT_BAD_NICK,
+  SILCTXT_UNKNOWN_NOTIFY,
+  SILCTXT_KE_BAD_VERSION,
+  SILCTXT_KE_UNSUPPORTED_PUBLIC_KEY,
+  SILCTXT_KE_UNKNOWN_PUBLIC_KEY,
+  SILCTXT_KE_UNKNOWN_GROUP,
+  SILCTXT_KE_UNKNOWN_CIPHER,
+  SILCTXT_KE_UNKNOWN_PKCS,
+  SILCTXT_KE_UNKNOWN_HASH_FUNCTION,
+  SILCTXT_KE_UNKNOWN_HMAC,
+  SILCTXT_KE_INCORRECT_SIGNATURE,
+  SILCTXT_AUTH_FAILED,
 };
 
 extern FORMAT_REC fecommon_silc_formats[];
