@@ -1,3 +1,8 @@
+Sun May 27 15:57:17 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>
+
+	* Added invite list, ban list, some key management and connection
+	  error message printing to module formats in the Irssi SILC client.
+
 Sun May 27 12:39:48 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>
 
 	* Fixed the private message sending in the Irssi SILC client,
